# VdD_2024_Practica

./: Práctica Final de Visualización de Datos.docx  README.md  build_charts.py  build_dataset.py  enlaces.txt  pyproject.toml  requirements.txt
data/: Global_Electricity_Demandand_Generation_Dataset.csv  final_dataset.csv  final_dataset.xlsx  sources.txt
data/charts/: generation_vs_demand.xlsx  most_expensive_countries.xlsx  rel_capacity_installed.xlsx  rel_growth.xlsx  rel_growth2.xlsx  renewable_generation_countries.xlsx  renewable_vs_non_renewable.xlsx  sunburst.csv  sunburst.xlsx  sunburst2.xlsx  world_diff.xlsx
