[tool.poetry]
name = "vdd-2024-practica"
version = "0.1.0"
description = "Práctica de la asignatura de Visualización de Datos, curso 2024-25"
authors = ["angmorpri <angelmorenoprieto@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
